--- a/src/features/shop/components/ProductCard.styles.scss
+++ b/src/features/shop/components/ProductCard.styles.scss
@@ -24,6 +24,10 @@
     top: 5px;
     border-radius: 8px;
     background-color: rgb(250 250 250 / 60%);
+
+    &:hover {
+      background-color: rgba($color-gray-70, 70%);
+    }
   }
 
   &:hover {
@@ -124,6 +128,10 @@
   .btn-primary {
     padding: 12px;
     min-height: auto;
+
+    &:hover {
+      background-color: rgba($color-gray-70, 70%);
+    }
   }
 }
 
