--- a/src/scss/globals/_colors.scss
+++ b/src/scss/globals/_colors.scss
@@ -10,6 +10,7 @@ $color-blue-30: #2f6d8f;
 // Red dust colors
 $color-dust-red-10: #a0738f;
 $color-dust-red-20: #793e5f;
+$color-dust-red-30: #b21534;
 $color-dust-red-40: #583247;
 
 // Red  colors
