--- a/src/layout/header/_header.scss
+++ b/src/layout/header/_header.scss
@@ -97,6 +97,8 @@ $animation-distance: 500px;
     border-radius: 50%;
     display: inline-grid;
     place-content: center;
+    min-width: fit-content;
+    padding: 4px;
   }
 }
 
