--- a/src/pages/CollectionPage.styles.scss
+++ b/src/pages/CollectionPage.styles.scss
@@ -23,8 +23,8 @@
   margin-block: 8px 24px;
 
   .toggle-panel {
-    max-width: rem(300px);
-    padding: 20px;
+    max-width: rem(400px);
+    overflow: hidden auto;
   }
 }
 
