removed aria-disabled

--- a/src/components/favorites/_favorites-heart.scss
+++ b/src/components/favorites/_favorites-heart.scss
@@ -9,9 +9,7 @@
     }
   }
 
-  &:has(input[aria-disabled='true']) {
-    pointer-events: none;
-
+  &:has(input:disabled) {
     svg {
       opacity: 0.2;
     }
