--- a/src/pages/CollectionPage.styles.scss
+++ b/src/pages/CollectionPage.styles.scss
@@ -23,9 +23,9 @@
   margin-block: 8px 24px;
 
   .toggle-panel {
-    max-width: rem(400px);
+    max-width: rem(500px);
     overflow: hidden auto;
-    padding-right: 20px;
+    padding: 28px;
   }
 }
 
