--- a/src/scss/_buttons.scss
+++ b/src/scss/_buttons.scss
@@ -124,12 +124,11 @@ a[class^='btn-'],
 
 // Button with icon
 .btn-with-icon {
-  display: flex;
-  gap: 8px;
   justify-content: space-between;
-  align-items: center;
-  width: 100%;
   padding-block: 0;
-  min-height: auto;
   background-color: transparent;
+  min-height: auto;
+  padding: 0;
+  font-size: 0.875rem;
+  border-radius: 0;
 }
