--- a/src/components/formElements/checkbox/_checkbox.scss
+++ b/src/components/formElements/checkbox/_checkbox.scss
@@ -22,6 +22,7 @@
     width: 100%;
     padding-block: 8px;
     justify-content: space-between;
+    align-items: center;
   }
 
   input[type='checkbox'] {
