--- a/src/components/formElements/checkbox/_checkbox.scss
+++ b/src/components/formElements/checkbox/_checkbox.scss
@@ -4,6 +4,8 @@
   display: flex;
   gap: 12px;
   margin-bottom: 12px;
+  overflow: auto;
+  max-height: 500px;
 
   &:not(.tag-list) {
     flex-direction: column;
