--- a/src/components/formElements/controlGroup/_control-list.scss
+++ b/src/components/formElements/controlGroup/_control-list.scss
@@ -41,9 +41,11 @@
       @include outline;
     }
 
-    &:has(input[type='radio']:disabled) {
+    &:has(input:disabled) {
       .control-label {
-        cursor: default;
+        pointer-events: none;
+
+        @extend %disabled-item;
       }
     }
   }
