--- a/src/layout/header/_header.scss
+++ b/src/layout/header/_header.scss
@@ -19,11 +19,6 @@ $animation-distance: 500px;
     }
   }
 
-  svg {
-    height: rem(24px);
-    width: rem(24px);
-  }
-
   .logo {
     svg {
       height: rem(24px);
@@ -33,6 +28,11 @@ $animation-distance: 500px;
         width: rem(200px);
       }
     }
+  }
+
+  .btn > svg {
+    height: rem(24px);
+    width: rem(24px);
   }
 }
 
