accordion style + trnslation

--- a/src/components/accordion/_accordion.scss
+++ b/src/components/accordion/_accordion.scss
@@ -29,6 +29,11 @@
       transition-behavior: allow-discrete;
     }
 
+    .accordion-title {
+      display: flex;
+      gap: 4px;
+    }
+
     .accordion-icon {
       transform: rotate(0);
 
