--- a/src/scss/_buttons.scss
+++ b/src/scss/_buttons.scss
@@ -124,11 +124,27 @@ a[class^='btn-'],
 
 // Button with icon
 .btn-with-icon {
-  justify-content: space-between;
+  gap: 4px;
   padding-block: 0;
   background-color: transparent;
   min-height: auto;
   padding: 0;
   font-size: 0.875rem;
   border-radius: 0;
+
+  &:hover {
+    color: $color-link-hover;
+  }
+
+  &:focus-visible {
+    color: $color-blue-30;
+
+    @include outline;
+
+    svg {
+      stroke: $color-blue-30;
+
+      @include transition;
+    }
+  }
 }
