delete filterbtn style

--- a/src/components/accordion/_accordion.scss
+++ b/src/components/accordion/_accordion.scss
@@ -19,6 +19,10 @@
       display: flex;
       flex-direction: column;
       gap: 8px;
+
+      .btn {
+        justify-content: flex-end;
+      }
     }
 
     &::details-content {
