--- a/src/scss/_buttons.scss
+++ b/src/scss/_buttons.scss
@@ -134,6 +134,12 @@ a[class^='btn-'],
 
   &:hover {
     color: $color-link-hover;
+
+    svg {
+      stroke: $color-blue-30;
+
+      @include transition;
+    }
   }
 
   &:focus-visible {
