--- a/src/components/formElements/checkbox/_checkbox.scss
+++ b/src/components/formElements/checkbox/_checkbox.scss
@@ -3,7 +3,7 @@
 .checkbox-list {
   display: flex;
   gap: 12px;
-  margin-bottom: 12px;
+  margin-block: 8px;
   overflow: auto;
   max-height: 500px;
   flex-direction: column;
