--- a/src/components/formElements/checkbox/_checkbox.scss
+++ b/src/components/formElements/checkbox/_checkbox.scss
@@ -5,7 +5,7 @@
   gap: 12px;
   margin-block: 8px;
   overflow: auto;
-  max-height: 500px;
+  max-height: rem(400px);
   flex-direction: column;
 
   .checkbox-item {
