--- a/src/features/shop/components/filterPanel.styles.scss
+++ b/src/features/shop/components/filterPanel.styles.scss
@@ -5,6 +5,16 @@
     align-items: baseline;
   }
 
+  .filter-panel-content {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+
+    .accordion-container {
+      flex-grow: 1;
+    }
+  }
+
   .clear-filter-btn {
     justify-content: flex-end;
     width: 100%;
@@ -13,7 +23,7 @@
   &.toggle-panel {
     max-width: rem(500px);
     overflow: hidden auto;
-    padding: 28px;
+    padding: 20px;
   }
 
   .color-icons {
