--- a/src/components/accordion/_accordion.scss
+++ b/src/components/accordion/_accordion.scss
@@ -1,15 +1,6 @@
 @use '../../scss/globals' as *;
 
-.accordion-container {
-  .product-care-info {
-    list-style: disc;
-    padding-inline-start: 30px;
-
-    li {
-      margin-top: 12px;
-    }
-  }
-
+.accordion {
   details {
     border-block-end: 1px solid $color-border-dark;
     overflow: clip;
