--- a/src/features/shop/components/filterPanel.styles.scss
+++ b/src/features/shop/components/filterPanel.styles.scss
@@ -32,9 +32,9 @@
 
 .toggle-content {
   overflow: hidden;
-  max-height: 1000px;
+  max-height: rem(1000px);
 
   &.collapsed {
-    max-height: 102px;
+    max-height: rem(112px);
   }
 }
