--- a/src/features/shop/components/filterPanel.styles.scss
+++ b/src/features/shop/components/filterPanel.styles.scss
@@ -18,9 +18,7 @@
     flex-direction: column;
   }
 
-  .color-icons {
-    display: flex;
-    border: 1px solid transparent;
+  .color-item {
     margin-right: 8px;
   }
 }
