--- a/src/features/shop/components/filterPanel.styles.scss
+++ b/src/features/shop/components/filterPanel.styles.scss
@@ -17,10 +17,6 @@
     display: flex;
     flex-direction: column;
   }
-
-  .color-item {
-    margin-right: 8px;
-  }
 }
 
 .filter-btn {
@@ -29,7 +25,7 @@
 }
 
 .toggle-content {
-  overflow: hidden;
+  overflow: clip;
   max-height: rem(1000px);
 
   &.collapsed {
