--- a/src/components/accordion/_accordion.scss
+++ b/src/components/accordion/_accordion.scss
@@ -12,6 +12,11 @@
       padding-bottom: 12px;
       display: flex;
       flex-direction: column;
+      gap: 8px;
+
+      p {
+        margin: 0;
+      }
     }
 
     &::details-content {
