--- a/src/components/formElements/radiobuttons/_radio-button.scss
+++ b/src/components/formElements/radiobuttons/_radio-button.scss
@@ -23,7 +23,7 @@
     @include outline;
   }
 
-  &:has(input[type='radio']:checked) {
+  &:has(input:checked) {
     .radio-btn-label {
       background-color: $color-background-secondary;
       color: $color-white;
