--- a/src/features/products/components/reviews/_reviews.scss
+++ b/src/features/products/components/reviews/_reviews.scss
@@ -54,6 +54,7 @@
     .radio-btn-label {
       background-color: transparent;
       width: auto;
+      cursor: pointer;
     }
 
     .radio-btn-content {
