--- a/src/scss/globals/_colors.scss
+++ b/src/scss/globals/_colors.scss
@@ -35,6 +35,7 @@ $color-light-gray-40: #e9e9ea;
 
 /* colors */
 $color-border: $color-gray-30;
+$color-input-background: $color-light-gray-30;
 $color-border-dark: $color-gray-60;
 $color-link-hover: $color-blue-30;
 $color-primary: $color-gray-80;
