--- a/src/pages/MainCollectionPage.styles.scss
+++ b/src/pages/MainCollectionPage.styles.scss
@@ -31,7 +31,7 @@
       left: 40px;
       padding: 12px;
 
-      @include max-size($medium) {
+      @include max-size($large) {
         left: auto;
       }
     }
