--- a/src/scss/globals/_mixins.scss
+++ b/src/scss/globals/_mixins.scss
@@ -24,24 +24,20 @@ $animation-timing-function: ease-in-out;
   }
 }
 
-@mixin transition($what: all, $time: 0.3s, $how: $animation-timing-function) {
-  // only apply transition if user allows motion
-  @media (prefers-reduced-motion: no-preference) {
-    & {
-      transition: $what $time $how;
+@mixin animation($name, $duration: $animation-duration, $timing: ease-in-out) {
+  animation: $name $duration $timing forwards;
+
+  @media (prefers-reduced-motion: reduce) {
+    #{&} {
+      animation: none !important;
     }
   }
 }
 
-@mixin animation(
-  $name,
-  $duration: $animation-duration,
-  $timing: $animation-timing-function
-) {
-  // only apply animation if user allows motion
+@mixin transition($what: all, $time: 0.3s, $how: ease-in-out) {
   @media (prefers-reduced-motion: no-preference) {
-    & {
-      animation: $name $duration $timing forwards;
+    #{&} {
+      transition: $what $time $how;
     }
   }
 }
