moved control-group-list to scss

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -8,6 +8,7 @@
 @forward 'animation';
 @forward 'error';
 @forward 'form-elements';
+@forward 'control-group-list';
 @forward 'form-error';
 @forward 'admin-card';
 @forward 'menu-burger';
