color list style

--- a/src/scss/_control-group-list.scss
+++ b/src/scss/_control-group-list.scss
@@ -24,7 +24,7 @@
     gap: 12px;
 
     .control-item {
-      border: 1px solid $color-border;
+      border: 1px solid transparent;
 
       .control-label {
         background-color: $color-light-gray-30;
