--- a/src/layout/nav/subNav/_sub-nav.scss
+++ b/src/layout/nav/subNav/_sub-nav.scss
@@ -11,14 +11,6 @@
   justify-content: center;
   display: none;
 
-  @include min-size($medium) {
-    overflow: clip;
-    max-height: 0;
-    opacity: 0;
-    transform: translateY(-10px);
-    pointer-events: none;
-  }
-
   @include transition;
 
   &.shown {
@@ -34,6 +26,10 @@
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     width: 100%;
+
+    @include max-size($small) {
+      grid-template-columns: repeat(3, 1fr);
+    }
   }
 
   .sub-nav-content {
@@ -60,6 +56,12 @@
       background-size: contain;
       background-repeat: no-repeat;
       background-position: top right;
+
+      @include max-size($small) {
+        height: 200px;
+        width: 100%;
+        grid-column: span 3;
+      }
     }
 
     &.background-gray {
@@ -105,35 +107,5 @@
     flex-direction: column;
     box-shadow: none;
     background-color: inherit;
-
-    .sub-nav {
-      display: flex;
-      flex-direction: column;
-
-      .sub-nav-item:not(.sub-nav-ad) {
-        padding: 0 40px;
-
-        a {
-          border-bottom: 1px solid $color-gray-60;
-          padding: 8px 12px;
-          font-size: $font-small;
-
-          &.active {
-            background-color: $color-gray-80;
-            color: $color-white;
-          }
-        }
-      }
-    }
-
-    .ad-heading {
-      position: relative;
-      top: auto;
-    }
-  }
-
-  .sub-nav-ad {
-    padding: 32px 20px;
-    margin-top: 12px;
   }
 }
