--- a/src/layout/nav/_nav.scss
+++ b/src/layout/nav/_nav.scss
@@ -2,11 +2,21 @@
 
 // Main nav
 .main-nav {
+  .nav-list {
+    display: flex;
+    gap: 18px;
+  }
+
   .nav-item {
     padding: 8px;
     text-transform: uppercase;
     border: 2px solid transparent;
 
+    &:focus-visible {
+      @include outline;
+    }
+
+    &:hover,
     &.active {
       color: $color-gray-70;
       border-bottom: 2px solid currentcolor;
@@ -15,10 +25,19 @@
 }
 
 // Admin nav
-.aside-nav {
+.admin-nav {
   .nav-item {
     &.active {
       background-color: $color-background;
+    }
+
+    &:hover {
+      background-color: $color-light-gray-40;
+    }
+
+    &:focus-visible {
+      background-color: $color-light-gray-40;
+      outline: transparent;
     }
   }
 
@@ -34,21 +53,6 @@
   }
 }
 
-.nav-list {
-  display: flex;
-  gap: 18px;
-
-  .nav-item {
-    &:hover {
-      color: $color-link-hover;
-    }
-
-    &:focus-visible {
-      @include outline;
-    }
-  }
-}
-
 // Shared nav
 .nav-container {
   height: 100%;
@@ -61,9 +65,7 @@
   }
 
   .nav-list {
-    display: flex;
     flex-direction: column;
-    gap: 0;
 
     .nav-item {
       font-size: $font-medium;
