--- a/src/layout/nav/_nav.scss
+++ b/src/layout/nav/_nav.scss
@@ -1,10 +1,34 @@
 @use '../../scss/globals' as *;
 
+// Shared nav
+.nav-container {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  overflow: hidden auto;
+
+  .nav {
+    flex-grow: 1;
+  }
+
+  .nav-item {
+    font-size: $font-medium;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    padding: 20px;
+
+    @include transition;
+  }
+}
+
 // Main nav
 .main-nav-container {
   .nav-list {
-    display: flex;
-    gap: 18px;
+    @include min-size($medium) {
+      display: flex;
+    }
   }
 
   .nav-item {
@@ -50,31 +74,5 @@
     top: 50%;
     transform: translate(-50%);
     right: -21px;
-  }
-}
-
-// Shared nav
-.nav-container {
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  overflow: hidden auto;
-
-  .nav {
-    flex-grow: 1;
-  }
-
-  .nav-list {
-    flex-direction: column;
-
-    .nav-item {
-      font-size: $font-medium;
-      width: 100%;
-      display: flex;
-      gap: 20px;
-      padding: 20px;
-
-      @include transition;
-    }
   }
 }
