--- a/src/scss/_admin-card.scss
+++ b/src/scss/_admin-card.scss
@@ -72,6 +72,11 @@
   background-color: $color-white;
   padding-top: 42px;
 
+  .badge-container {
+    display: flex;
+    gap: 8px;
+  }
+
   @include max-size($small) {
     padding-top: 0;
   }
