--- a/src/components/datePicker/_date-picker.scss
+++ b/src/components/datePicker/_date-picker.scss
@@ -34,7 +34,7 @@
     font-size: $font-small;
 
     &:disabled {
-      pointer-events: none;
+      background: none;
     }
 
     &:focus-visible {
