--- a/src/layout/nav/subNav/_sub-nav.scss
+++ b/src/layout/nav/subNav/_sub-nav.scss
@@ -46,11 +46,6 @@
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     width: 100%;
-
-    @include max-size($small) {
-      grid-template-columns: repeat(3, 1fr);
-      margin-top: 8px;
-    }
   }
 
   .sub-nav-content {
@@ -71,10 +66,6 @@
       }
     }
 
-    @include max-size($small) {
-      padding-inline: 20px;
-    }
-
     p {
       margin: 0;
       margin-top: 8px;
@@ -89,12 +80,6 @@
       background-size: contain;
       background-repeat: no-repeat;
       background-position: top right;
-
-      @include max-size($small) {
-        height: rem(230px);
-        width: 100%;
-        grid-column: span 3;
-      }
     }
 
     &.background-gray {
@@ -146,5 +131,20 @@
     flex-direction: column;
     box-shadow: none;
     background-color: inherit;
+
+    .sub-nav {
+      grid-template-columns: repeat(3, 1fr);
+      margin-top: 8px;
+    }
+
+    .sub-nav-item {
+      padding-inline: 20px;
+    }
+
+    .sub-nav-ad {
+      height: rem(230px);
+      width: 100%;
+      grid-column: span 3;
+    }
   }
 }
