--- a/src/pages/home/_hero.scss
+++ b/src/pages/home/_hero.scss
@@ -6,7 +6,7 @@
 
   @include max-size($large) {
     padding-left: 40px;
-    height: auto;
+    padding-block: 24px;
   }
 
   .hero-content {
@@ -18,7 +18,7 @@
     height: 100%;
 
     @include max-size($large) {
-      max-width: rem(448px);
+      max-width: rem(400px);
     }
   }
 
